Fix Gap Below SVGs
Along with the default value of `display:inline` comes a gap below SVG images, as a result of their inheriting `line-height`. Changing their display property to block fixes this.

--- a/wp-content/themes/benmiles-wp/assets/css/custom.css
+++ b/wp-content/themes/benmiles-wp/assets/css/custom.css
@@ -402,6 +402,12 @@ a:hover {
     -webkit-text-decoration-skip: objects;
 }
 
+/*	SVGS ---------------------------------------------------------------------*/
+
+.svg svg {
+	display: block;
+}
+
 /*	SOCIAL MEDIA -------------------------------------------------------------*/
 
 .social-media {
